--- a/package.json
+++ b/package.json
@@ -6,17 +6,24 @@
   "exports": "./dist/index.js",
   "scripts": {
     "build": "tsc",
-    "dev": "nodemon --watch './**/*.ts' --exec 'node --loader ts-node/esm' src/index.ts"
+    "start": "node dist",
+    "dev": "nodemon --watch './**/*.ts' --exec 'node --loader ts-node/esm' src/index.ts",
+    "lint": "eslint --fix src/**/*.*",
+    "format": "prettier --write src/**/*.*"
   },
   "devDependencies": {
+    "@rhnorskov/eslint-config": "^1.0.1",
+    "@rhnorskov/prettier-config": "^1.0.0",
+    "@swc/cli": "^0.1.57",
+    "@swc/core": "^1.3.1",
     "@types/node": "^18.7.14",
-    "@types/screenshot-desktop": "^1.12.0",
     "nodemon": "^2.0.19",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.2"
   },
   "dependencies": {
     "@nut-tree/nut-js": "^2.2.1",
-    "screenshot-desktop": "^1.12.7"
+    "@nut-tree/template-matcher": "^1.0.1",
+    "winston": "^3.8.2"
   }
 }
